Dockersized the application